[tool.poetry]
name = "gate-seal"
version = "0.1.0"
description = ""
authors = ["Azat Serikov <azatsdev@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.4,<3.11"
eth-ape = "^0.6.2"
vyper = "0.3.10"
eth-utils = "^2.1.0"
ape-hardhat = "^0.6.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
