[tool.poetry]
name = "gate-seal"
version = "0.1.0"
description = ""
authors = ["Azat Serikov <azatsdev@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10.13"
vyper = "0.4.2"
ape-hardhat = "0.8.5"
ape-vyper = "0.8.9"
ape-infura = "0.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
